UPDATED PROMPT - ALL NEW ENTRIES